UCF-APR2.4/ftr main/force-app/main/default/objects/EVC__c/fields/Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth__c</fullName>
    <label>Bandwidth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1M</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2M</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3M</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4M</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5M</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6M</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7M</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8M</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9M</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10M</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20M</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30M</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>40M</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>50M</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60M</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>70M</label>
            </value>
            <value>
                <fullName>80</fullName>
                <label>80M</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90M</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>100M</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>200M</label>
            </value>
            <value>
                <fullName>300</fullName>
                <label>300M</label>
            </value>
            <value>
                <fullName>400</fullName>
                <label>400M</label>
            </value>
            <value>
                <fullName>500</fullName>
                <label>500M</label>
            </value>
            <value>
                <fullName>600</fullName>
                <label>600M</label>
            </value>
            <value>
                <fullName>700</fullName>
                <label>700M</label>
            </value>
            <value>
                <fullName>800</fullName>
                <label>800M</label>
            </value>
            <value>
                <fullName>900</fullName>
                <label>900M</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <label>1G</label>
            </value>
            <value>
                <fullName>2000</fullName>
                <label>2G</label>
            </value>
            <value>
                <fullName>3000</fullName>
                <label>3G</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>