UCF-APR2.4/ftr main/force-app/main/default/objects/EVC__c/fields/DIA_PE_Router_Termination_CLLI__c.field-meta.xml
<CustomField>
    <fullName>DIA_PE_Router_Termination_CLLI__c</fullName>
    <description>OEM ID- HUB1, HUB2, Remote for HBE ELAN locations reuse of DIA PE Router field</description>
    <inlineHelpText>OEM ID for HBE ELAN locations</inlineHelpText>
    <label>ELAN OEM ID</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HUB1</fullName>
            </value>
            <value>
                <fullName>HUB2</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>