UCF-APR2.4/ftr main/force-app/main/default/objects/EVC__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EIA</fullName>
            </value>
            <value>
                <fullName>ELINE</fullName>
            </value>
            <value>
                <fullName>ELAN-1</fullName>
            </value>
            <value>
                <fullName>ELAN-2</fullName>
            </value>
            <value>
                <fullName>ELAN-3</fullName>
            </value>
            <value>
                <fullName>ELAN-4</fullName>
            </value>
            <value>
                <fullName>ELAN-5</fullName>
            </value>
            <value>
                <fullName>ELAN-6</fullName>
            </value>
            <value>
                <fullName>ELAN-7</fullName>
            </value>
            <value>
                <fullName>ELAN-8</fullName>
            </value>
            <value>
                <fullName>SD WAN PN</fullName>
            </value>
            <value>
                <fullName>EPL</fullName>
                <isActive>false</isActive>
                <label>EPL</label>
            </value>
            <value>
                <fullName>EPLAN</fullName>
                <isActive>false</isActive>
                <label>EPLAN</label>
            </value>
            <value>
                <fullName>EVPLAN</fullName>
                <isActive>false</isActive>
                <label>EVPLAN</label>
            </value>
            <value>
                <fullName>PSR EVPL - EIA</fullName>
                <isActive>false</isActive>
                <label>PSR EVPL - EIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>